Updated '_site_pages/Generated-Pages/idea-generator.html' via CloudCannon

--- a/_site_pages/Generated-Pages/idea-generator.html
+++ b/_site_pages/Generated-Pages/idea-generator.html
@@ -72,7 +72,7 @@ permalink: /idea-generator
     'red',
     'orange',
     'blue',
-    'violet',
+    'purple',
     'fuzzy',
     'crunchy',
     'chewy',
@@ -87,6 +87,7 @@ permalink: /idea-generator
     'radical',
     'spectacular',
     'scary',
+    'electrifying',
     'gigantic',
     'tiny',
     'miniature',
@@ -96,7 +97,6 @@ permalink: /idea-generator
     'low poly',
     'lo-fi',
     'funky',
-    'laughing',
     'nonfunctional',
     'hexagonal',
     'triangular',
