Updated '_site_pages/Generated-Pages/idea-generator.html' via CloudCannon

--- a/_site_pages/Generated-Pages/idea-generator.html
+++ b/_site_pages/Generated-Pages/idea-generator.html
@@ -91,6 +91,7 @@ permalink: /idea-generator
     'gigantic',
     'tiny',
     'miniature',
+    'ornate',
     'lugubrious',
     'talking',
     'musical',
