Updated '_site_pages/Generated-Pages/idea-generator.html' via CloudCannon

--- a/_site_pages/Generated-Pages/idea-generator.html
+++ b/_site_pages/Generated-Pages/idea-generator.html
@@ -177,7 +177,6 @@ permalink: /idea-generator
     var materials = [
     'paper',
     'wood',
-    'pine',
     'cardboard',
     'felt',
     'fabric',
@@ -191,6 +190,9 @@ permalink: /idea-generator
     'plastic',
     'chipboard',
     'metal',
+    'foam',
+    'paint',
+    'sound waves',
     'duct tape',
     'linoleum'
     ];
@@ -212,7 +214,7 @@ permalink: /idea-generator
     '3D scanner',
     'microcontroller',
     'pair of scissors',
-    'human hand',
+    'a pair of tweezers',
     'toothpick',
     'audio recording device',
     'computer',
