Updated '_site_pages/Generated-Pages/idea-generator.html' via CloudCannon

--- a/_site_pages/Generated-Pages/idea-generator.html
+++ b/_site_pages/Generated-Pages/idea-generator.html
@@ -214,7 +214,7 @@ permalink: /idea-generator
     '3D scanner',
     'microcontroller',
     'pair of scissors',
-    'a pair of tweezers',
+    'pair of tweezers',
     'toothpick',
     'audio recording device',
     'computer',
