--- a/_site_pages/Generated-Pages/idea-generator.html
+++ b/_site_pages/Generated-Pages/idea-generator.html
@@ -264,7 +264,7 @@ permalink: /idea-generator
     }
     igenURL = 'http://cplmakerlab.github.io/idea-generator?' + 'adj=' + encodeURI(randAdj) + '&thing=' + encodeURI(randThing) + '&material=' + encodeURI(randMaterial) + '&tool=' + encodeURI(randTool);
   }
-  generateIdea();
+  generateIdea('load');
   var igenSave = function() {
     prompt('Copy & paste URL', igenURL);
   }  
