Updated '_site_pages/Generated-Pages/idea-generator.html' via CloudCannon

--- a/_site_pages/Generated-Pages/idea-generator.html
+++ b/_site_pages/Generated-Pages/idea-generator.html
@@ -52,7 +52,7 @@ permalink: /idea-generator
     }
     else {
       adj = decodeURI(getUrlVars()["adj"]) || null;
-      thing = decodeURI(getUrlVars()["thing"]) || "";  
+      thing = decodeURI(getUrlVars()["thing"]) || null;  
       material = decodeURI(getUrlVars()["material"]) || null;
       tool = decodeURI(getUrlVars()["tool"]) || null;      
     }
