--- a/_site_pages/Generated-Pages/idea-generator.html
+++ b/_site_pages/Generated-Pages/idea-generator.html
@@ -30,6 +30,7 @@ permalink: /idea-generator
 </style>
 
 <script src="//cdnjs.cloudflare.com/ajax/libs/seedrandom/3.0.5/seedrandom.min.js"></script>
+
 <!-- For the sake of visibility & learning, this code is included as inline JS. The best practice is to separate and load JS as a separate file.  -->
 <script>
   function getUrlVars() {
@@ -267,7 +268,10 @@ permalink: /idea-generator
     }
     igenURL = 'http://cplmakerlab.github.io/idea-generator?' + 'adj=' + encodeURI(randAdj) + '&thing=' + encodeURI(randThing) + '&material=' + encodeURI(randMaterial) + '&tool=' + encodeURI(randTool);
   }
+  // Trigger on page load
   generateIdea('load');
+  
+  // Popup to save url
   var igenSave = function() {
     prompt('Copy & paste URL', igenURL);
   }  
