--- a/_site_pages/Generated-Pages/idea-generator.html
+++ b/_site_pages/Generated-Pages/idea-generator.html
@@ -45,6 +45,7 @@ permalink: /idea-generator
   
   // http://cplmakerlab.github.io/idea-generator?adj=lugubrious&thing=plush monster&material=felt&tool=lasercutter
   function generateIdea(type) {
+    
     switch (type) {
       case "new": 
         adj = null;
@@ -54,14 +55,14 @@ permalink: /idea-generator
         break;
       case "load":
       default:
-        // Try to load from URL
+        // Try to initialize variables from URL
         adj = getUrlVars()["adj"] ? decodeURI(getUrlVars()["adj"]) : null;
         thing = getUrlVars()["thing"] ? decodeURI(getUrlVars()["thing"]) : null;  
         material = getUrlVars()["material"] ? decodeURI(getUrlVars()["material"]) : null;
         tool = getUrlVars()["tool"] ? decodeURI(getUrlVars()["tool"]) : null; 
         break;
     }
-
+    
     var colors = [
       '#f94144',
       '#f3722c',
