Updated '_site_pages/Generated-Pages/idea-generator.html' via CloudCannon

--- a/_site_pages/Generated-Pages/idea-generator.html
+++ b/_site_pages/Generated-Pages/idea-generator.html
@@ -10,13 +10,14 @@ permalink: /idea-generator
 
 <hr>
 
+<blockquote>
 <h1>Make <span class="igen-adj-article">a</span> <span class="igen-adj">________</span> <span class="igen-thing">________</span></h1>
 
 <h1>...out of <span class="igen-material">________</span></h1>
 
 <h1>...using <span class="igen-tool-article">a</span> <span class="igen-tool">________</span></h1>
 
-
+</blockquote>
 <button type="button" class="button igen-save" onclick="igenSave();"><i class="fa fa-heart"></i> SAVE</button>  
 <button class="button igen-generate" onclick="generateIdea('new');"><i class="fa fa-repeat"></i> GENERATE NEW IDEA</button>
 
@@ -33,6 +34,10 @@ permalink: /idea-generator
 
 <!-- For the sake of visibility & learning, this code is included as inline JS. The best practice is to separate and load JS as a separate file.  -->
 <script>
+  var adj,thing,material,tool;
+  var igenURL;
+  
+  // Helper function to get variables in URL
   function getUrlVars() {
       var vars = {};
       var parts = window.location.href.replace(/[?&]+([^=&]+)=([^&]*)/gi, function(m,key,value) {
@@ -40,14 +45,15 @@ permalink: /idea-generator
       });
       return vars;
   }
-  var adj,thing,material,tool;
-  var igenURL;
   
-  // http://cplmakerlab.github.io/idea-generator?adj=lugubrious&thing=plush monster&material=felt&tool=lasercutter
+  /**
+   * Generate a random adjective, thing, material, and tool and replace words in HTML
+   */
   function generateIdea(type) {
     
     // Increase randomness of Math.random()
-    // Not sure if this is correct usage
+    // @@TODO: does this actually do anything?
+    // See: https://github.com/davidbau/seedrandom
     Math.seedrandom(); 
     
     switch (type) {
@@ -279,6 +285,7 @@ permalink: /idea-generator
   generateIdea('load');
   
   // Pop-up prompt to save url
+  // Example:   // http://cplmakerlab.github.io/idea-generator?adj=lugubrious&thing=plush monster&material=felt&tool=lasercutter
   var igenSave = function() {
     prompt('Copy & paste URL', igenURL);
   }  
