--- a/_site_pages/Generated-Pages/worksheets_2.html
+++ b/_site_pages/Generated-Pages/worksheets_2.html
@@ -1,7 +1,7 @@
 ---
-title: Guides
+title: Worksheets
 header_image: uploads/coding.jpg
-permalink: /guides
+permalink: /worksheets
 ---
 
 {% assign topics = "," | split: ","%}
