--- a/_site_pages/Generated-Pages/worksheets_2.html
+++ b/_site_pages/Generated-Pages/worksheets_2.html
@@ -1,7 +1,7 @@
 ---
-title: Worksheets
+title: Worksheets 2
 header_image: uploads/coding.jpg
-permalink: /worksheets
+permalink: /worksheets2
 ---
 
 {% assign topics = "," | split: ","%}
